--- a/app/src/main/res/layout/record_income_expense.xml
+++ b/app/src/main/res/layout/record_income_expense.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <View
@@ -20,8 +19,8 @@
 
     <EditText
         android:id="@+id/editTextDateRecord"
-        android:layout_width="82dp"
-        android:layout_height="32dp"
+        android:layout_width="84dp"
+        android:layout_height="36dp"
         android:layout_marginTop="20dp"
         android:autofillHints="date"
         android:ems="10"
@@ -34,8 +33,8 @@
 
     <EditText
         android:id="@+id/editTextCategoryRecord"
-        android:layout_width="135dp"
-        android:layout_height="31dp"
+        android:layout_width="134dp"
+        android:layout_height="37dp"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="@string/category_name"
@@ -47,8 +46,8 @@
 
     <EditText
         android:id="@+id/editTextAmountRecord"
-        android:layout_width="93dp"
-        android:layout_height="31dp"
+        android:layout_width="89dp"
+        android:layout_height="36dp"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="@string/_0_00"
@@ -58,19 +57,17 @@
         app:layout_constraintStart_toEndOf="@+id/editTextCategoryRecord"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="355dp"
-        android:layout_height="46dp"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/editTextDescRecord"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="24dp"
+        android:backgroundTint="#FFFFFF"
+        android:hint="@string/hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextCategoryRecord">
+        app:layout_constraintTop_toBottomOf="@+id/editTextCategoryRecord" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextDescRecord"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:backgroundTint="#FFFFFF"
-            android:hint="@string/hint" />
-    </com.google.android.material.textfield.TextInputLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
