--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -56,12 +56,12 @@
                     android:text="@string/rm"
                     android:textSize="20sp"
                     android:textColor="@color/black"
-                    app:layout_constraintEnd_toStartOf="@+id/espenseNumber"
+                    app:layout_constraintEnd_toStartOf="@+id/expenseNumber"
                     app:layout_constraintStart_toEndOf="@+id/textViewExpenseTotal"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/espenseNumber"
+                    android:id="@+id/expenseNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="22dp"
@@ -75,13 +75,13 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/expense_list"
+                    android:id="@+id/expenseRec"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="20dp"
                     app:layout_constraintTop_toBottomOf="@+id/textViewExpenseTotal"
                     tools:itemCount="5"
-                    tools:listitem="@layout/recycler_view_item_1" />
+                    tools:listitem="@layout/record_income_expense" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
