--- a/app/src/main/res/layout/record_income_expense.xml
+++ b/app/src/main/res/layout/record_income_expense.xml
@@ -78,7 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Delete"
+        android:text="@string/delete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editTextDescRecord"
         app:layout_constraintTop_toBottomOf="@+id/editTextAmountRecord" />
