--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="card5">#e27c6f</color>
     <color name="card6">#c9e3db</color>
     <color name="card7">#86d098</color>
+    <color name="grey">#c1c1c1</color>
 
 </resources>
 
