--- a/app/src/main/res/layout/fragment_non_editable_user_data.xml
+++ b/app/src/main/res/layout/fragment_non_editable_user_data.xml
@@ -35,7 +35,7 @@
             android:id="@+id/viewProfileName"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:layout_marginTop="108dp"
+            android:layout_marginTop="80dp"
             android:autofillHints=""
             android:backgroundTint="@color/sysLightBlue"
             android:ems="10"
@@ -46,15 +46,15 @@
             android:textAlignment="center"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.8"
+            app:layout_constraintHorizontal_bias="0.65"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/viewProfileEmail"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_marginTop="250dp"
+            android:layout_marginTop="20dp"
             android:autofillHints=""
             android:backgroundTint="@color/sysLightBlue"
             android:ems="10"
@@ -65,8 +65,56 @@
             android:textAlignment="center"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.8"
+            app:layout_constraintHorizontal_bias="0.65"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/viewProfileName" />
+
+        <TextView
+            android:id="@+id/expense_View"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:hint="@string/total_expense"
+            android:text="@string/_0_00"
+            android:textAlignment="viewEnd"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.58"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/viewProfileEmail" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/total_expense_rm"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/expense_View"
+            app:layout_constraintStart_toStartOf="@+id/expense_View"
+            app:layout_constraintTop_toTopOf="@+id/expense_View" />
+
+        <TextView
+            android:id="@+id/expense_View2"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:hint="@string/total_expense"
+            android:text="@string/_0_00"
+            android:textAlignment="viewEnd"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.58"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/expense_View" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/total_income_rm"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/expense_View2"
+            app:layout_constraintStart_toStartOf="@+id/expense_View2"
+            app:layout_constraintTop_toTopOf="@+id/expense_View2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
