--- a/app/src/main/res/layout/fragment_non_editable_user_data.xml
+++ b/app/src/main/res/layout/fragment_non_editable_user_data.xml
@@ -70,7 +70,7 @@
             app:layout_constraintTop_toBottomOf="@+id/viewProfileName" />
 
         <TextView
-            android:id="@+id/expense_View"
+            android:id="@+id/profileTtlExpense"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
@@ -89,12 +89,12 @@
             android:layout_height="wrap_content"
             android:text="@string/total_expense_rm"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@+id/expense_View"
-            app:layout_constraintStart_toStartOf="@+id/expense_View"
-            app:layout_constraintTop_toTopOf="@+id/expense_View" />
+            app:layout_constraintBottom_toBottomOf="@+id/profileTtlExpense"
+            app:layout_constraintStart_toStartOf="@+id/profileTtlExpense"
+            app:layout_constraintTop_toTopOf="@+id/profileTtlExpense" />
 
         <TextView
-            android:id="@+id/expense_View2"
+            android:id="@+id/profileTtlIncome"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -105,7 +105,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.58"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/expense_View" />
+            app:layout_constraintTop_toBottomOf="@+id/profileTtlExpense" />
 
         <TextView
             android:id="@+id/textView10"
@@ -113,8 +113,8 @@
             android:layout_height="wrap_content"
             android:text="@string/total_income_rm"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@+id/expense_View2"
-            app:layout_constraintStart_toStartOf="@+id/expense_View2"
-            app:layout_constraintTop_toTopOf="@+id/expense_View2" />
+            app:layout_constraintBottom_toBottomOf="@+id/profileTtlIncome"
+            app:layout_constraintStart_toStartOf="@+id/profileTtlIncome"
+            app:layout_constraintTop_toTopOf="@+id/profileTtlIncome" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
